<resources>
    <string name="app_name">FreeWorkout</string>
    <string name="menu_name">Einstellungen</string>
    <string name="dialog_skills">Skills:</string>
    <string name="dialog_type">Fokus:</string>
    <string name="dialog_days">Tage/Woche:</string>
    <string name="dialog_hardness">Stärke:</string>
    <string name="dialog_button_positive">Schließen</string>
    <string name="dialog_button_calc">Neu erstellen</string>
    <string name="button_new_week">Neue Woche berechnen</string>
    <string name="button_new_prefs">Einstellungen</string>
    <string name="text_day_1">Tag 1</string>
    <string name="text_day_2">Tag 2</string>
    <string name="text_day_3">Tag 3</string>
    <string name="text_day_4">Tag 4</string>
    <string name="text_day_5">Tag 5</string>
    <string name="text_day_6">Tag 6</string>
    <string name="text_day_7">Tag 7</string>
    <string name="text_round_1">Runde 1</string>
    <string name="text_round_2">Runde 2</string>
    <string name="text_round_3">Runde 3</string>
    <string name="text_round_4">Runde 4</string>
    <string name="text_round_5">Runde 5</string>
    <string name="text_round_6">Runde 6</string>
    <string name="text_round_7">Runde 7</string>
    <string name="text_round_8">Runde 8</string>
    <string name="text_round_9">Runde 9</string>
    <string name="text_round_10">Runde 10</string>
    <string name="text_round_11">Runde 11</string>
    <string name="text_round_12">Runde 12</string>
    <string name="text_round_13">Runde 13</string>
    <string name="text_round_14">Runde 14</string>
    <string name="text_round_15">Runde 15</string>
    <string name="text_round_16">Runde 16</string>
    <string name="text_round_17">Runde 17</string>
    <string name="text_round_18">Runde 18</string>
    <string name="radio_Endurance">Cardio</string>
    <string name="radio_Standard">Cardio/Strength</string>
    <string name="radio_Strength">Strength</string>
</resources>
