<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/colorTextView1"
            android:background="@color/colorTextView2"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_gravity="top"
            android:id="@+id/text_workout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_day_1"
            android:visibility="gone"/>
        <ListView
            android:id="@+id/list_workout_day1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true">
        </ListView>
        <TextView
            android:textColor="@color/colorTextView1"
            android:background="@color/colorTextView2"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_gravity="top"
            android:id="@+id/text_workout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_day_2"
            android:visibility="gone"/>
        <ListView
            android:id="@+id/list_workout_day2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="1"
            />
        <TextView
            android:textColor="@color/colorTextView1"
            android:background="@color/colorTextView2"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_gravity="top"
            android:id="@+id/text_workout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_day_3"
            android:visibility="gone" />
        <ListView
            android:id="@+id/list_workout_day3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="1"
            />
        <TextView
            android:textColor="@color/colorTextView1"
            android:background="@color/colorTextView2"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_gravity="top"
            android:id="@+id/text_workout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_day_4"
            android:visibility="gone" />
        <ListView
            android:id="@+id/list_workout_day4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="1"
            />
        <TextView
            android:textColor="@color/colorTextView1"
            android:background="@color/colorTextView2"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_gravity="top"
            android:id="@+id/text_workout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_day_5"
            android:visibility="gone" />
        <ListView
            android:id="@+id/list_workout_day5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="1"
            />
        <TextView
            android:textColor="@color/colorTextView1"
            android:background="@color/colorTextView2"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_gravity="top"
            android:id="@+id/text_workout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_day_6"
            android:visibility="gone" />
        <ListView
            android:id="@+id/list_workout_day6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="1"
            />
        <TextView
            android:textColor="@color/colorTextView1"
            android:background="@color/colorTextView2"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_gravity="top"
            android:id="@+id/text_workout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_day_7"
            android:visibility="gone" />
        <ListView
            android:id="@+id/list_workout_day7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/button_prefs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonClick"
            android:text="@string/button_new_prefs"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp" />
        <Button
            android:id="@+id/button_calc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="buttonClick"
            android:text="@string/button_new_week"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp" />
        <TextView
            android:padding="10dp"
            android:id="@+id/text_days_till_new_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

    </LinearLayout>
</ScrollView>