<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/colorTextView1"
            android:background="@color/colorTextView2"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_gravity="top"
            android:id="@+id/text_workout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_round_1"
            android:visibility="gone"/>
        <ListView
            android:id="@+id/list_round1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true">
        </ListView>
        <TextView
            android:textColor="@color/colorTextView1"
            android:background="@color/colorTextView2"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_gravity="top"
            android:id="@+id/text_workout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_round_2"
            android:visibility="gone"/>
        <ListView
            android:id="@+id/list_round2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="1"
            />
        <TextView
            android:textColor="@color/colorTextView1"
            android:background="@color/colorTextView2"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_gravity="top"
            android:id="@+id/text_workout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_round_3"
            android:visibility="gone" />
        <ListView
            android:id="@+id/list_round3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="1"
            />
        <TextView
            android:textColor="@color/colorTextView1"
            android:background="@color/colorTextView2"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_gravity="top"
            android:id="@+id/text_workout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_round_4"
            android:visibility="gone" />
        <ListView
            android:id="@+id/list_round4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="1"
            />
        <TextView
            android:textColor="@color/colorTextView1"
            android:background="@color/colorTextView2"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_gravity="top"
            android:id="@+id/text_workout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_round_5"
            android:visibility="gone" />
        <ListView
            android:id="@+id/list_round5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="1"
            />
        <TextView
            android:textColor="@color/colorTextView1"
            android:background="@color/colorTextView2"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_gravity="top"
            android:id="@+id/text_workout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_round_6"
            android:visibility="gone" />
        <ListView
            android:id="@+id/list_round6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="1"
            />
        <TextView
            android:textColor="@color/colorTextView1"
            android:background="@color/colorTextView2"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_gravity="top"
            android:id="@+id/text_workout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_round_7"
            android:visibility="gone" />
        <ListView
            android:id="@+id/list_round7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="1"
            />


    </LinearLayout>
</ScrollView>