<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10sp">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0,1,2,3"
        android:collapseColumns="4">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_type"
                android:gravity="left"
                android:layout_marginRight="5sp"
                android:layout_marginEnd="5sp"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:textColor="#000000"/>
        </TableRow>
        <TableRow>
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <RadioGroup
                    android:id="@+id/radioType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5sp">

                    <RadioButton
                        android:id="@+id/radioEndurance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_Endurance"
                        android:onClick="onRadioButtonClicked" />

                    <RadioButton
                        android:id="@+id/radioStandard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_Standard"
                        android:onClick="onRadioButtonClicked" />

                    <RadioButton
                        android:id="@+id/radioStrength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_Strength"
                        android:onClick="onRadioButtonClicked" />

                </RadioGroup>

            </LinearLayout>
        </TableRow>
        <TableRow>
            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/dialog_days"
                 android:gravity="left"
                 android:layout_marginRight="5sp"
                 android:layout_marginEnd="5sp"
                 android:textSize="18sp"
                 android:textStyle="normal|bold"
                 android:textColor="#000000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_hardness"
                android:gravity="left"
                android:layout_marginRight="5sp"
                android:layout_marginEnd="5sp"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                android:textColor="#000000"/>
        </TableRow>
        <TableRow>
            <Spinner
                android:id="@+id/edit_spinner_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />
            <Spinner
                android:id="@+id/edit_spinner_hardness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />
        </TableRow>

        <TableRow>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:padding="5sp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_skills"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_marginRight="5sp"
                    android:layout_marginEnd="5sp"
                    android:textSize="18sp"
                    android:textStyle="normal|bold"
                    android:textColor="#000000"/>
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">
                    <CheckBox android:id="@+id/checkbox_pullups"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pullups"
                        android:onClick="onCheckboxClicked" />
                    <CheckBox android:id="@+id/checkbox_hs_pushups"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="HS Pushups"
                        android:onClick="onCheckboxClicked"/>
                    <CheckBox android:id="@+id/checkbox_oh_pushups"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="OH Pushups"
                        android:onClick="onCheckboxClicked"/>
                    <CheckBox android:id="@+id/checkbox_ttb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Toes to Bar"
                        android:onClick="onCheckboxClicked"/>
                    <CheckBox android:id="@+id/checkbox_pistols"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pistols Squats"
                        android:onClick="onCheckboxClicked"/>
                    <CheckBox android:id="@+id/checkbox_muscleups"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Muscleups"
                        android:onClick="onCheckboxClicked"/>
                </LinearLayout>
            </LinearLayout>

        </TableRow>
        <!--<TableRow>
            <Button
                android:id="@+id/button_calc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buttonClick"
                android:text="@string/dialog_button_calc" />
        </TableRow>-->
</TableLayout>
</ScrollView>